crates/oxc_cli/src/snapshots/oxc_cli__command__snapshot__help_help.snap
---
source: crates/oxc_cli/src/command.rs
info:
  program: oxlint
  args:
    - "--help"
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Linter for the JavaScript Oxidation Compiler

Usage: oxlint [-A=NAME | -D=NAME]... [--fix] [PATH]...

Allowing / Denying Multiple Lints
  For example `-D correctness -A no-debugger` or `-A all -D no-debugger`. ㅤ
  The default category is "-D correctness".
  Use "--rules" for rule names.
  Use "--help --help" for rule categories.
  The categories are:
  * correctness - code that is outright wrong or useless
  * suspicious  - code that is most likely wrong or useless
  * pedantic    - lints which are rather strict or have occasional false positives
  * style       - code that should be written in a more idiomatic way
  * nursery     - new lints that are still under development
  * restriction - lints which prevent the use of language and library features
  * all         - all the categories listed above
    -A, --allow=NAME          Allow the rule or category (suppress the lint)
    -D, --deny=NAME           Deny the rule or category (emit an error)

Fix Problems
        --fix                 Fix as many issues as possible. Only unfixed issues are reported in the
                              output

Ignore Files
        --ignore-path=PATH    Specify the file to use as your .eslintignore
        --ignore-pattern=PAT  Specify patterns of files to ignore (in addition to those in .eslintignore)
                              The supported syntax is the same as for .eslintignore and .gitignore files
                              You should quote your patterns in order to avoid shell interpretation of
                              glob patterns
        --no-ignore           Disables excluding of files from .eslintignore files, --ignore-path flags
                              and --ignore-pattern flags

Handle Warnings
        --quiet               Disable reporting on warnings, only errors are reported
        --max-warnings=INT    Specify a warning threshold, which can be used to force exit with an error
                              status if there are too many warning-level rule violations in your project

Miscellaneous
        --timing              Display the execution time of each lint rule
                              [env:TIMING: not set]
        --rules               list all the rules that are currently registered
        --threads=INT         Number of threads to use. Set to 1 for using only 1 CPU core

Available positional items:
    PATH                      Single file, single path or list of paths

Available options:
    -h, --help                Prints help information


----- stderr -----

